# voxel-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  textures.aseprite
assets/: crosshair.aseprite  shader.wgsl
src/: aabb.rs  app.rs  app_state.rs  block.rs  blocks.rs  camera.rs  chunk.rs  chunk_data.rs  chunk_material.rs  chunk_mesh.rs  game_state.rs  input.rs  level.rs  lib.rs  light.rs  main.rs  material.rs  materials.rs  model.rs  model_buffer.rs  models.rs  packed_data.rs  physics.rs  player.rs  plugins.rs  projection.rs  region.rs  registry.rs  relevant_chunks.rs  renderer.rs  rock.aseprite  shader.wgsl  texture.rs  texture_array.rs  texture_array_builder.rs  texture_builder.rs  ui_renderer.rs  voxel_mesh.rs  voxel_pipeline.rs  voxel_renderer.rs  (+3 more)
src/blocks/: glass.rs  glowstone.rs  rock.rs  rock_slab.rs  soil.rs  wood.rs
src/materials/: loam.rs  lush_grass.rs  oak.rs  shale.rs
src/models/: cube.rs  slab.rs
src/physics/: aabb.rs  move_and_slide.rs  swept_aabb.rs
src/plugins/: hud.rs  physics.rs  player.rs  registry.rs  world.rs
textures/: textures.aseprite
