[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["bevy_dev_tools"] }
bevy_egui = "0.39.0"
csscolorparser = "0.8.1"
image = "0.25.9"
indexmap = "2.13.0"
log = "0.4.29"
noise = "0.9.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = { version = "0.27.2", features = ["derive"] }
