[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["bevy_dev_tools"] }
bevy_egui = "0.39.0"
csscolorparser = "0.8.1"
image = "0.25.9"
indexmap = { version = "2.13.0", features = ["serde"] }
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_warn"] }
noise = "0.9.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
strum = { version = "0.27.2", features = ["derive"] }

[features]
dev = ["bevy/dev", "bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
